# application-services

./: Cargo.toml
logins-api/android/: build.gradle
logins-sql/: Cargo.toml
logins-sql/examples/: sync_pass_sql.rs
logins-sql/ffi/: Cargo.toml
logins-sql/ffi/src/: error.rs  lib.rs
logins-sql/src/: db.rs  engine.rs  error.rs  lib.rs  login.rs  schema.rs  update_plan.rs  util.rs
sync15-adapter/src/: request.rs  state.rs
website/blog/: 2018-09-10-account-recovery-in-firefox-accounts.md
