[package]
name = "loginsql_ffi"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[lib]
name = "loginsapi_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde_json = "1.0.26"
log = "0.4.4"
url = "1.7.1"
reqwest = "0.8.2"

[dependencies.rusqlite]
version = "0.14.0"
features = ["sqlcipher"]

[dependencies.logins-sql]
path = ".."

[dependencies.sync15-adapter]
path = "../../sync15-adapter"
